--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -19,10 +19,10 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: lts/*
-      # - name: Install dependencies
-      #   run: npm install -g yarn && yarn
-      # - name: Install Playwright Browsers
-      #   run: yarn playwright install --with-deps
+      - name: Install dependencies
+        run: npm install -g yarn && yarn
+      - name: Install Playwright Browsers
+        run: yarn playwright install --with-deps
       - name: Run tests
         run: yarn install --frozen-lockfile && yarn install && yarn ${{ inputs.run-command }}
 
