--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -25,6 +25,8 @@ jobs:
         run: yarn playwright install --with-deps
       - name: Run tests
         run: yarn install --frozen-lockfile && yarn install && yarn ${{ inputs.run-command }}
+        env:
+          HEADLESS: true
 
       - uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
