--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           node-version: lts/*
       - name: Install dependencies
-        run: npm install -g yarn && yarn
+        run: npm install -g yarn
       - name: Install Playwright Browsers
         run: yarn playwright install --with-deps
       - name: Run tests
