--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -19,8 +19,11 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: lts/*
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
+
       - name: Run tests
-        run: yarn install --frozen-lockfile && yarn install && yarn ${{ inputs.run-command }}
+        run: yarn ${{ inputs.run-command }}
         env:
           HEADLESS: true
 
