--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -33,3 +33,27 @@ jobs:
           name: playwright-report
           path: src/e2e/allure-results/
           retention-days: 30
+
+      - name: Load test report history
+        uses: actions/checkout@v3
+        if: always()
+        continue-on-error: true
+        with:
+          ref: gh-pages
+          path: gh-pages
+
+      - name: Build test report
+        uses: simple-elf/allure-report-action@v1.7
+        if: always()
+        with:
+          gh_pages: gh-pages
+          allure_history: allure-history
+          allure_results: src/e2e/allure-results
+
+      - name: Build test report
+        uses: simple-elf/allure-report-action@v1.7
+        if: always()
+        with:
+          gh_pages: gh-pages
+          allure_history: allure-history
+          allure_results: src/e2e/allure-results
