--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -34,8 +34,8 @@ jobs:
       - uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
         with:
-          name: playwright-report
-          path: src/e2e/allure-results/
+          name: allure-results
+          path: allure-results
           retention-days: 30
 
       - name: Load test report history
@@ -52,7 +52,7 @@ jobs:
         with:
           gh_pages: gh-pages
           allure_history: allure-history
-          allure_results: src/e2e/allure-results
+          allure_results: allure-results
 
       - name: Build test report
         uses: simple-elf/allure-report-action@v1.7
@@ -60,4 +60,4 @@ jobs:
         with:
           gh_pages: gh-pages
           allure_history: allure-history
-          allure_results: src/e2e/allure-results
+          allure_results: allure-results
