--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -35,7 +35,8 @@ jobs:
         if: ${{ !cancelled() }}
         with:
           name: allure-results
-          path: allure-results
+          path: src/e2e/allure-results
+          if-no-files-found: warn
           retention-days: 30
 
       - name: Load test report history
