--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -15,7 +15,7 @@ jobs:
       run:
         working-directory: src/e2e
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
       - uses: actions/setup-node@v4
         with:
           node-version: lts/*
@@ -31,13 +31,13 @@ jobs:
         env:
           HEADLESS: true
 
-      - uses: actions/upload-artifact@v4
-        if: ${{ !cancelled() }}
-        with:
-          name: allure-results
-          path: src/e2e/allure-results
-          if-no-files-found: warn
-          retention-days: 30
+      # - uses: actions/upload-artifact@v4
+      #   if: ${{ !cancelled() }}
+      #   with:
+      #     name: allure-results
+      #     path: src/e2e/allure-results
+      #     if-no-files-found: warn
+      #     retention-days: 30
 
       - name: Load test report history
         uses: actions/checkout@v3
@@ -62,3 +62,11 @@ jobs:
           gh_pages: gh-pages
           allure_history: allure-history
           allure_results: allure-results
+
+      - name: Publish test report
+        uses: peaceiris/actions-gh-pages@v3
+        if: always()
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: gh-pages
+          publish_dir: allure-history
