--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -16,9 +16,9 @@ jobs:
         working-directory: src/e2e
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v4
+      - uses: actions/setup-node@v3
         with:
-          node-version: lts/*
+          node-version: 18
 
       - name: Install dependencies
         run: npm install -g yarn && yarn
@@ -39,34 +39,28 @@ jobs:
       #     if-no-files-found: warn
       #     retention-days: 30
 
-      - name: Load test report history
-        uses: actions/checkout@v3
+      - name: Get Allure history
+        uses: actions/checkout@v2
         if: always()
         continue-on-error: true
         with:
           ref: gh-pages
           path: gh-pages
 
-      - name: Build test report
-        uses: simple-elf/allure-report-action@v1.7
-        if: always()
+      - name: Generate Allure Report
+        uses: simple-elf/allure-report-action@master
+        id: allure-report
         with:
-          gh_pages: gh-pages
-          allure_history: allure-history
           allure_results: allure-results
-
-      - name: Build test report
-        uses: simple-elf/allure-report-action@v1.7
-        if: always()
-        with:
           gh_pages: gh-pages
+          allure_report: allure-report
           allure_history: allure-history
-          allure_results: allure-results
+          keep_reports: 20
 
-      - name: Publish test report
-        uses: peaceiris/actions-gh-pages@v3
-        if: always()
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_branch: gh-pages
-          publish_dir: allure-history
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: peaceiris/actions-gh-pages@v2
+        env:
+          PERSONAL_TOKEN: ${{ secrets.TOKEN }}
+          PUBLISH_BRANCH: gh-pages
+          PUBLISH_DIR: allure-history
