--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -61,6 +61,6 @@ jobs:
         id: deployment
         uses: peaceiris/actions-gh-pages@v2
         env:
-          PERSONAL_TOKEN: ${{ secrets.TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PUBLISH_BRANCH: gh-pages
           PUBLISH_DIR: allure-history
