--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -46,6 +46,8 @@ jobs:
         with:
           ref: gh-pages
           path: gh-pages
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Generate Allure Report
         uses: simple-elf/allure-report-action@master
@@ -59,7 +61,7 @@ jobs:
 
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: peaceiris/actions-gh-pages@v2
+        uses: peaceiris/actions-gh-pages@v3
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PUBLISH_BRANCH: gh-pages
