--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -39,30 +39,27 @@ jobs:
       #     if-no-files-found: warn
       #     retention-days: 30
 
-      - name: Get Allure history
-        uses: actions/checkout@v2
+      - name: Load test report history
+        uses: actions/checkout@v3
         if: always()
         continue-on-error: true
         with:
           ref: gh-pages
           path: gh-pages
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Generate Allure Report
-        uses: simple-elf/allure-report-action@master
-        id: allure-report
+      - name: Build test report
+        uses: simple-elf/allure-report-action@v1.7
+        if: always()
         with:
-          allure_results: allure-results
           gh_pages: gh-pages
-          allure_report: allure-report
           allure_history: allure-history
+          allure_results: allure-results
           keep_reports: 20
 
-      - name: Deploy to GitHub Pages
-        id: deployment
+      - name: Publish test report
         uses: peaceiris/actions-gh-pages@v3
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PUBLISH_BRANCH: gh-pages
-          PUBLISH_DIR: allure-history
+        if: always()
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: gh-pages
+          publish_dir: allure-history
