--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,11 +1,10 @@
 name: Playwright Tests
 on:
+  push:
+    branches: [main, master]
+  pull_request:
+    branches: [main, master]
   workflow_dispatch:
-    inputs:
-      run-command:
-        description: 'Run command'
-        required: true
-        type: string
 
 jobs:
   execute-tests:
@@ -15,8 +14,11 @@ jobs:
       run:
         working-directory: src/e2e
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
           node-version: 18
 
@@ -26,40 +28,39 @@ jobs:
       - name: Install Playwright Browsers
         run: yarn playwright install --with-deps
 
-      - name: Run tests
-        run: yarn install --frozen-lockfile && yarn ${{ inputs.run-command }}
+      - name: Run Smoke Tests
+        run: yarn smoke
         env:
           HEADLESS: true
 
-      # - uses: actions/upload-artifact@v4
-      #   if: ${{ !cancelled() }}
-      #   with:
-      #     name: allure-results
-      #     path: src/e2e/allure-results
-      #     if-no-files-found: warn
-      #     retention-days: 30
+      - name: Upload Allure Results
+        uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: allure-results
+          path: src/e2e/allure-results
+          if-no-files-found: warn
+          retention-days: 30
 
-      - name: Load test report history
+  publish-report:
+    needs: execute-tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
         uses: actions/checkout@v3
-        if: always()
-        continue-on-error: true
-        with:
-          ref: gh-pages
-          path: gh-pages
 
-      - name: Build test report
-        uses: simple-elf/allure-report-action@v1.7
-        if: always()
+      - name: Download Allure Results
+        uses: actions/download-artifact@v3
         with:
-          gh_pages: gh-pages
-          allure_history: allure-history
-          allure_results: allure-results
-          keep_reports: 20
+          name: allure-results
 
-      - name: Publish test report
+      - name: Generate Allure Report
+        run: |
+          npm install -g allure-commandline --save-dev
+          allure generate allure-results --clean -o allure-report
+
+      - name: Publish Allure Report to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
-        if: always()
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_branch: gh-pages
-          publish_dir: allure-history
+          publish_dir: allure-report
