--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -53,6 +53,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: allure-results
+          path: allure-results
 
       - name: List Directory Contents
         run: ls -R
