--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -46,8 +46,15 @@ jobs:
     needs: execute-tests
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - uses: actions/checkout@v3
+
+      - name: Get Allure history
         uses: actions/checkout@v3
+        if: always()
+        continue-on-error: true
+        with:
+          ref: gh-pages
+          path: gh-pages
 
       - name: Download Allure Results
         uses: actions/download-artifact@v4
@@ -55,17 +62,27 @@ jobs:
           name: allure-results
           path: allure-results
 
-      - name: List Directory Contents
-        run: ls -R
-        shell: bash
+      - name: Build test report
+        uses: simple-elf/allure-report-action@v1.7
+        if: always()
+        with:
+          gh_pages: gh-pages
+          allure_history: allure-history
+          allure_results: allure-results
+          keep_reports: 20
 
-      - name: Generate Allure Report
-        run: |
-          npm install -g allure-commandline --save-dev
-          allure generate allure-results --clean -o allure-report
+      # - name: List Directory Contents
+      #   run: ls -R
+      #   shell: bash
+
+      # - name: Generate Allure Report
+      #   run: |
+      #     npm install -g allure-commandline --save-dev
+      #     allure generate allure-results --clean -o allure-report
 
       - name: Publish Allure Report to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: allure-report
+          publish_branch: gh-pages
