--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -25,8 +25,8 @@ jobs:
       # - name: Install dependencies
       #   run: npm install -g yarn && yarn
 
-      # - name: Install Playwright Browsers
-      #   run: yarn playwright install --with-deps
+      - name: Install Playwright Browsers
+        run: yarn playwright install --with-deps
 
       - name: Run Smoke Tests
         run: yarn install --frozen-lockfile && yarn smoke
