--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -22,8 +22,8 @@ jobs:
         with:
           node-version: 18
 
-      # - name: Install dependencies
-      #   run: npm install -g yarn && yarn
+      - name: Install dependencies
+        run: npm install -g yarn && yarn
 
       - name: Install Playwright Browsers
         run: yarn playwright install-deps
