--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -29,7 +29,7 @@ jobs:
         run: yarn playwright install-deps
 
       - name: Run Smoke Tests
-        run: yarn install --frozen-lockfile && yarn smoke
+        run: yarn smoke
         env:
           HEADLESS: true
 
