--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -29,7 +29,7 @@ jobs:
         run: yarn playwright install --with-deps
 
       - name: Run Smoke Tests
-        run: yarn smoke
+        run: yarn regression
         env:
           HEADLESS: true
 
