--- a/src/e2e/package.json
+++ b/src/e2e/package.json
@@ -9,6 +9,7 @@
     "@playwright/test": "^1.51.1",
     "@types/cucumber": "^7.0.3",
     "@types/node": "^22.14.1",
+    "allure-commandline": "^2.33.0",
     "allure-cucumberjs": "^3.2.1",
     "allure-js-commons": "^3.2.1",
     "cross-env": "^7.0.3",
@@ -17,6 +18,8 @@
     "typescript": "^5.8.3"
   },
   "scripts": {
-    "smoke": "cross-env cucumber-js --require support/hooks.ts --require steps/**/*.steps.ts --require-module ts-node/register features/**/*.feature --format allure-cucumberjs/reporter -t @smoke --retry 0"
+    "allure-report": "yarn allure generate allure-results --clean -o allure-report && allure open allure-report",
+    "smoke": "cross-env cucumber-js --require support/hooks.ts --require steps/**/*.steps.ts --require-module ts-node/register features/**/*.feature --format allure-cucumberjs/reporter -t @smoke --retry 1 -t @smoke",
+    "regression": "cross-env cucumber-js --require support/hooks.ts --require steps/**/*.steps.ts --require-module ts-node/register features/**/*.feature --format allure-cucumberjs/reporter --retry 1 -t @regression"
   }
 }
