--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -44,6 +44,7 @@ jobs:
 
   publish-report:
     needs: execute-tests
+    if: always()
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
